--- a/cv_3.tex
+++ b/cv_3.tex
@@ -97,13 +97,13 @@
 \textit{\href {http://www.questtag.com}{http://www.questtag.com}}\\
 }\raggedleft\textsc{Jan 2014 - Nov 2016}\\[1pt]}
 \textbf{Back End}\\
-	 \textsc{- Develop Rest Api using \textit{java} and \textit{play framework}.}\\
+	 \textsc{- Develop REST API using \textit{java} and \textit{play framework}.}\\
 	 \textsc{- Design and Maintain Production Database in \textit{mysql}.}\\
 	 \textsc{- Co-ordinate with Mobile and Browser clients.}\\
 	 \textsc{- End-to-End Testing and Quality Assurance.}\\
 	 \textsc{- Create Documentation for both public and internal use.}\\
 \textbf{Front End}\\	
-	 \textsc{- Implement Api consumption module in \textit{jquery}.}\\
+	 \textsc{- Implement API consumption module in \textit{jquery}.}\\
 	 \textsc{- Develop Application, Data manager \& Adapter module.}\\
 
 
@@ -119,8 +119,8 @@
 %------------------------------------------------
 
 
-{\raggedright\large Questtag delivery solution at \textsc{Questtag Inc}\\
-\large\textbf{\href{https://dashboard.questtag.com}{https://dashboard.questtag.com}}\\[2pt]
+{\raggedright\large Questtag Delivery Solution\\
+\textit{\href{https://dashboard.questtag.com}{https://dashboard.questtag.com}}\\[2pt]
 }
 
 \textsc{- \href{http://www.questtag.com/features/}{QT dashboard features.}(http://www.questtag.com/features/)}\\
@@ -132,7 +132,7 @@
 
 
 {\raggedright\large Build Systems \\
-	\textbf{\href {https://github.com/Bitaron/java-maven}{https://git.io/v15lc}(mvn), \href{https://github.com/Bitaron/java-sbt}{https://git.io/v15lW}(sbt)
+	\textit{\href {https://github.com/Bitaron/java-maven}{https://git.io/v15lc}(mvn), \href{https://github.com/Bitaron/java-sbt}{https://git.io/v15lW}(sbt)
 		\href{https://github.com/Bitaron/js}{https://git.io/v15l4}(js)}\\[5pt]}
 \textsc{- Use of \textbf{maven} with \textbf{JAX-RX} \& \textbf{JPA}. }\\
 \textsc{- Use of \textbf{sbt} with \textbf{Play} \& \textbf{Ebean}..}\\
@@ -147,7 +147,7 @@
 
 
 {\raggedright\large Web API Security \\
-	\textbf{\href {https://github.com/Bitaron/java-maven/tree/security}{https://git.io/v15lO}}\\[5pt]}
+	\textit{\href {https://github.com/Bitaron/java-maven/tree/security}{https://git.io/v15lO}}\\[5pt]}
 \textsc{- Use of \textbf{JAX-RX security context}.}\\
 \textsc{- Implementation of  \textbf{BASIC AUTH} and  \textbf{JWT}.}\\
 
@@ -158,7 +158,7 @@
 
 
 {\raggedright\large Weather Application \\
-	\textbf{\href {https://github.com/Bitaron/js/tree/weather}{https://git.io/v15lR}}\\[5pt]}
+	\textit{\href {https://github.com/Bitaron/js/tree/weather}{https://git.io/v15lR}}\\[5pt]}
 \textsc{- Display temperature and current local time based on city.}\\
 \textsc{- Use of \textbf{react.js} and \textbf{flux} architecture.}\\
 \textsc{- Testing \textbf{flux} using \textbf{jasmine}.}\\
@@ -170,7 +170,7 @@
 
 
 {\raggedright\large Silent \\
-	\textbf{\href {https://dl.dropboxusercontent.com/u/84146203/projects/android/silent.apk}{http://bit.ly/2he7hd5}}\\[5pt]}
+	\textit{\href {https://dl.dropboxusercontent.com/u/84146203/projects/android/silent.apk}{http://bit.ly/2he7hd5}}\\[5pt]}
 \textsc{- Turn mobile silent based on predefined time and \textbf{geofence}.}\\
 \textsc{- Use of \textbf{gradle}.}\\
 
@@ -181,7 +181,7 @@
 
 
 {\raggedright\large Lets go \\
-	\textbf{\href {https://dl.dropboxusercontent.com/u/84146203/projects/android/letsgo.apk}{http://bit.ly/2hwlipz}}\\[5pt]}
+	\textit{\href {https://dl.dropboxusercontent.com/u/84146203/projects/android/letsgo.apk}{http://bit.ly/2hwlipz}}\\[5pt]}
 \textsc{- List nearby places based on users location and preference}\\
 \textsc{- Use of \textbf{node-express-mongo} stack}\\
 \textsc{- Use of \textbf{retrofit},\textbf{android account} \& \textbf{google map}}\\
@@ -254,36 +254,34 @@
 \section{Language Skill} 
 
 \begin{tabular}{rl}
-Basic Knowledge
-& \textsc{C family of language}, \LaTeX\\ 
+Intermediate 
+& \textsc{java}, \textsc{javascript}, PHP\\
+& Shel ,SQL\\
+& Scheme \\
+&\\
+Basic 
+& \textsc{C family of languages}, \LaTeX\\ 
 &HTML \& css\\
-& \\
-
-Intermediate Knowledge
-& \textsc{java}, \textsc{javascript},\\
-& Shell script, php,\\
-& SQL \\
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
 %	TOOL
 %----------------------------------------------------------------------------------------
 
-\section{ToolS} 
+\section{Tools} 
 
 \begin{tabular}{rl}
-\textsc{Library \& Framework}
-& Maven, SBT, JAX-RX, JPA\\
-& Node,Jake, React.js, Flux, Jasmine. \\
-& Laravel, Play \\
-& Android, Unity\\
+	
+Intermediate
+& Maven, Play\\
+& Node.js, React.js, Flux, jquery. \\
+& Andriod, Gradle, Retrofit\\
 & \\
-
-
-\textsc{Others}
-& Nginx, Apache, Tomcat\\
-& Amazon AWS.\\
-&\\
+Basic
+& Angular.js\\
+& Laravel, Codeigniter \\
+& Nginx, Apache Tomcat,  Amazon AWS.\\
+& Unity, Dot Net\\
 \end{tabular}\\[10pt]
 
 %----------------------------------------------------------------------------------------
