New: Add mPower social data.

--- a/cv_3.tex
+++ b/cv_3.tex
@@ -93,18 +93,23 @@
 %------------------------------------------------
 % WORK EXPERIENCE 1
 %------------------------------------------------
+{{\raggedright\large mPower Social Enterprises Ltd. \\
+\textit{\href {http://www.mpower-social.com/}{http://www.mpower-social.com/}}\\
+}\raggedleft\textsc{Feb 2017 - }\\[1pt]}
+	\textsc{- Develop OpenSRP\href {http://smartregister.org/}{(an opensource project)} in \textit{java} \textit{spring}}\\
+
+
+%------------------------------------------------
+% WORK EXPERIENCE 2
+%------------------------------------------------
 {{\raggedright\large Questtag Inc, New York  \\
 \textit{\href {http://www.questtag.com}{http://www.questtag.com}}\\
 }\raggedleft\textsc{Jan 2014 - Nov 2016}\\[1pt]}
-\textbf{Back End}\\
 	 \textsc{- Develop REST API using \textit{java} and \textit{play framework}.}\\
-	 \textsc{- Design and Maintain Production Database in \textit{mysql}.}\\
-	 \textsc{- Co-ordinate with Mobile and Browser clients.}\\
+	 \textsc{- Implement front end client \textit{jquery}.}\\
 	 \textsc{- End-to-End Testing and Quality Assurance.}\\
 	 \textsc{- Create Documentation for both public and internal use.}\\
-\textbf{Front End}\\	
-	 \textsc{- Implement API consumption module in \textit{jquery}.}\\
-	 \textsc{- Develop Application, Data manager \& Adapter module.}\\
+	
 
 
 
@@ -113,6 +118,21 @@
 %----------------------------------------------------------------------------------------
 
 \section{Projects} 
+
+%------------------------------------------------
+%	PROJECT 0
+%------------------------------------------------
+
+
+{\raggedright\large OpenSrp\\
+\textit{\href{http://smartregister.org/}{http://smartregister.org/}}\\[2pt]
+}
+
+\textsc{- \href{https://github.com/OpenSRP/opensrp-server/commits/path?author=Bitaron}{Unit and Integration tests.}(https://github.com/OpenSRP/opensrp-server/commits/path?author=Bitaron)}\\
+\textsc{- \href{https://github.com/OpenSRP/opensrp-server/commits/bd-family-planning?author=Bitaron}{work on MIS-1 report.}(https://github.com/OpenSRP/opensrp-server/commits/bd-family-planning?author=Bitaron)}\\
+\textsc{- \href{https://github.com/OpenSRP/docker-builds/tree/docker-postgresql}{Docker Integration.}(https://github.com/OpenSRP/docker-builds/tree/docker-postgresql)}\\
+
+
 
 %------------------------------------------------
 %	PROJECT 1
@@ -145,11 +165,11 @@
 %	PROJECT 3
 %------------------------------------------------
 
-
-{\raggedright\large Web API Security \\
-	\textit{\href {https://github.com/Bitaron/java-maven/tree/security}{https://git.io/v15lO}}\\[5pt]}
-\textsc{- Use of \textbf{JAX-RX security context}.}\\
-\textsc{- Implementation of  \textbf{BASIC AUTH} and  \textbf{JWT}.}\\
+%
+%{\raggedright\large Web API Security \\
+%	\textit{\href {https://github.com/Bitaron/java-maven/tree/security}{https://git.io/v15lO}}\\[5pt]}
+%\textsc{- Use of \textbf{JAX-RX security context}.}\\
+%\textsc{- Implementation of  \textbf{BASIC AUTH} and  \textbf{JWT}.}\\
 
 
 %------------------------------------------------
@@ -169,20 +189,12 @@
 %------------------------------------------------
 
 
-{\raggedright\large Silent \\
-	\textit{\href {https://dl.dropboxusercontent.com/u/84146203/projects/android/silent.apk}{http://bit.ly/2he7hd5}}\\[5pt]}
-\textsc{- Turn mobile silent based on predefined time and \textbf{geofence}.}\\
+{\raggedright\large Sample Android Applicatons \\
+	\textit{Silent \href {https://dl.dropboxusercontent.com/u/84146203/projects/android/silent.apk}{http://bit.ly/2he7hd5}}\\[5pt]}
+	\textsc{- Turn mobile silent based on predefined time and \textbf{geofence}.}\\
 \textsc{- Use of \textbf{gradle}.}\\
-
-
-%------------------------------------------------
-%	PROJECT 4
-%------------------------------------------------
-
-
-{\raggedright\large Lets go \\
-	\textit{\href {https://dl.dropboxusercontent.com/u/84146203/projects/android/letsgo.apk}{http://bit.ly/2hwlipz}}\\[5pt]}
-\textsc{- List nearby places based on users location and preference}\\
+		\textit{Lets Go \href {https://dl.dropboxusercontent.com/u/84146203/projects/android/letsgo.apk}{http://bit.ly/2hwlipz}}\\[5pt]
+		\textsc{- List nearby places based on users location and preference}\\
 \textsc{- Use of \textbf{node-express-mongo} stack}\\
 \textsc{- Use of \textbf{retrofit},\textbf{android account} \& \textbf{google map}}\\
 
