--- a/cv_3.tex
+++ b/cv_3.tex
@@ -68,6 +68,9 @@
 
 \titlespacing{\section}{0pt}{0pt}{5pt} % Spacing around titles
 
+\newcommand\tab[1][1cm]{\hspace*{#1}}
+
+
 \begin{document}
 
 \color{text1} % Sets the default text c\textitolor for the whole document to the color defined as 'text1'
@@ -90,21 +93,43 @@
 
 \section{Work Experience} 
 
+
 %------------------------------------------------
 % WORK EXPERIENCE 1
 %------------------------------------------------
-{{\raggedright\large mPower Social Enterprises Ltd. \\
-\textit{\href {http://www.mpower-social.com/}{http://www.mpower-social.com/}}\\
-}\raggedleft\textsc{Feb 2017 - }\\[1pt]}
-	\textsc{- Develop OpenSRP\href {http://smartregister.org/}{(an opensource project)} in \textit{java} \textit{spring}}\\
+{{\raggedright\large Commlink Info Tech Ltd.(\textbf{Sept 2017 -}) \\
+\textit{\href {https://www.commlinkinfotech.com/}{https://www.commlinkinfotech.com/}}\\
+}}
+	 \textsc{- Network management software}\\
+	 	\tab \textsc{- Use \textit{google Map api} with \textit{flux architecture}}\\
+	 	\tab \textsc{- Implement \textit{TMF814V3.2} using \textit{Corba}.}\\
+	 	\tab \textsc{- Backend development(caching,api) in \textit{Java}.}\\
+	 \textsc{- System on Chip(SoC) }\\
+	 	\tab \textsc{- Project management.}\\
+	 	\tab \textsc{- Build system using \textit{ruby} and \textit{rake} to build, test and deploy.}\\
+	 	\tab \textsc{- Add \textit{unity} \textit{C} testing framework.}\\
+	 	\tab \textsc{- Embedded large application software(\textit{C} language) debug.}\\
+	 	\tab \textsc{- \textit{SoC} boot using \textit{U-boot} and \textit{linux}.}\\
+	 	\tab \textsc{- \textit{SoC} h/w pin configuration and connection check.}\\
+	 	\tab \textsc{- Documentation of every process.}\\
+	 	\tab \textsc{- Android app to upload application software to SoC}\\
 
 
 %------------------------------------------------
 % WORK EXPERIENCE 2
 %------------------------------------------------
-{{\raggedright\large Questtag Inc, New York  \\
+{{\raggedright\large mPower Social Enterprises Ltd.(\textbf{Feb 2017 - Aug 2017})\\
+\textit{\href {http://www.mpower-social.com/}{http://www.mpower-social.com/}}\\
+}}
+	\textsc{- Develop OpenSRP\href {http://smartregister.org/}{(an open source project)} in \textit{java} \textit{spring}}\\
+
+
+%------------------------------------------------
+% WORK EXPERIENCE 3
+%------------------------------------------------
+{{\raggedright\large Questtag Inc.(\textbf{Jan 2014 - Nov 2016})  \\
 \textit{\href {http://www.questtag.com}{http://www.questtag.com}}\\
-}\raggedleft\textsc{Jan 2014 - Nov 2016}\\[1pt]}
+}}
 	 \textsc{- Develop REST API using \textit{java} and \textit{play framework}.}\\
 	 \textsc{- Implement front end client \textit{jquery}.}\\
 	 \textsc{- End-to-End Testing and Quality Assurance.}\\
@@ -117,7 +142,7 @@
 %	PROJECT
 %----------------------------------------------------------------------------------------
 
-\section{Projects} 
+\section{Official Projects} 
 
 %------------------------------------------------
 %	PROJECT 0
@@ -146,19 +171,36 @@
 \textsc{- \href{http://www.questtag.com/features/}{QT dashboard features.}(http://www.questtag.com/features/)}\\
 
 
+
+%%------------------------------------------------
+%%	PROJECT 4
+%%------------------------------------------------
+%
+%
+%{\raggedright\large Cache library \\
+%	\textit{\href {https://github.com/Bitaron/Simple-Cache}{https://git.io/JeraX}}\\[5pt]}
+%\textsc{- Simple \textit{java} library.}\\
+
+
+
 %------------------------------------------------
-%	PROJECT 2
+%	PROJECT 4
 %------------------------------------------------
 
 
-{\raggedright\large Build Systems \\
-	\textit{\href {https://github.com/Bitaron/java-maven}{https://git.io/v15lc}(mvn), \href{https://github.com/Bitaron/java-sbt}{https://git.io/v15lW}(sbt)
-		\href{https://github.com/Bitaron/js}{https://git.io/v15l4}(js)}\\[5pt]}
-\textsc{- Use of \textbf{maven} with \textbf{JAX-RX} \& \textbf{JPA}. }\\
-\textsc{- Use of \textbf{sbt} with \textbf{Play} \& \textbf{Ebean}..}\\
-\textsc{- Build system using \textbf{node} and \textbf{jake}}\\
-\normalsize{}\\
+{\raggedright\large Corba architecture \\
+	\textit{\href {https://github.com/Bitaron/Corba}{https://git.io/Jeray}}\\[5pt]}
+\textsc{- \textit{Corba} library use example.}\\
 
+
+%------------------------------------------------
+%	PROJECT 4
+%------------------------------------------------
+
+
+{\raggedright\large Embedded application test \\
+	\textit{\href {https://github.com/Bitaron/C}{https://git.io/JeraH}}\\[5pt]}
+\textsc{- Use of \textit{Cppu} library to test \textit{C} code.}\\
 
 
 %------------------------------------------------
@@ -172,31 +214,6 @@
 %\textsc{- Implementation of  \textbf{BASIC AUTH} and  \textbf{JWT}.}\\
 
 
-%------------------------------------------------
-%	PROJECT 4
-%------------------------------------------------
-
-
-{\raggedright\large Weather Application \\
-	\textit{\href {https://github.com/Bitaron/js/tree/weather}{https://git.io/v15lR}}\\[5pt]}
-\textsc{- Display temperature and current local time based on city.}\\
-\textsc{- Use of \textbf{react.js} and \textbf{flux} architecture.}\\
-\textsc{- Testing \textbf{flux} using \textbf{jasmine}.}\\
-
-
-%------------------------------------------------
-%	PROJECT 5
-%------------------------------------------------
-
-
-{\raggedright\large Sample Android Applicatons \\
-	\textit{Silent \href {https://dl.dropboxusercontent.com/u/84146203/projects/android/silent.apk}{http://bit.ly/2he7hd5}}\\[5pt]}
-	\textsc{- Turn mobile silent based on predefined time and \textbf{geofence}.}\\
-\textsc{- Use of \textbf{gradle}.}\\
-		\textit{Lets Go \href {https://dl.dropboxusercontent.com/u/84146203/projects/android/letsgo.apk}{http://bit.ly/2hwlipz}}\\[5pt]
-		\textsc{- List nearby places based on users location and preference}\\
-\textsc{- Use of \textbf{node-express-mongo} stack}\\
-\textsc{- Use of \textbf{retrofit},\textbf{android account} \& \textbf{google map}}\\
 
 
 %----------------------------------------------------------------------------------------	
@@ -209,19 +226,19 @@
 %----------------------------------------------------------------------------------------
 %	COLORED BOX
 %----------------------------------------------------------------------------------------
-
-\begin{minipage}[t]{0.3\textwidth}
-{\raggedleft\begin{figure}[H]
-	\includegraphics[width=\textwidth]{pic.jpg}
-\end{figure}}
-\end{minipage} % End the left-hand side of the page
+%
+%\begin{minipage}[t]{0.3\textwidth}
+%{\raggedleft\begin{figure}[H]
+%	\includegraphics[width=\textwidth]{pic.jpg}
+%\end{figure}}
+%\end{minipage} % End the left-hand side of the page
 
 \begin{minipage}[t]{0.44\textwidth} % Start the right-hand side of the page
 \vspace{0pt} 
 {\raggedright	
 \colorbox{shade}{\textcolor{text1}{
 \begin{tabular}{c|p{7cm}}
-\raisebox{-4pt}{\textifsymbol{18}} & 5/28 Mirpur-7/4d , Dhaka-1216 \\ % Address
+\raisebox{-4pt}{\textifsymbol{18}} & 353/A, Khilgaon, Tilpapara , Dhaka-1216 \\ % Address
 \raisebox{-3pt}{\Mobilefone} & +880-01791693643 \\ % Phone number
 \raisebox{-1pt}{\Letter} & \href{mailto:bitaron90@gmail.com}{bitaron90@gmail.com} \\ % Email address
 %\Keyboard & \href{http://www.johnsmith.com}{http://www.johnsmith.com} \\ % Website
@@ -233,9 +250,28 @@
 %----------------------------------------------------------------------------------------
 %	ABOUT ME
 %----------------------------------------------------------------------------------------
+%
+%\section{About Me}
+%\normalsize{Highly dependable Software Engineer and enthusiastic team player dedicated to streamlining processes and efficiently resolving project issues. Capable of applying design patterns to solve real world problems. Strongly motivated to use decoupled design architecture.}\\
 
-\section{About Me}
-\normalsize{Highly dependable Software Engineer and enthusiastic team player dedicated to streamlining processes and efficiently resolving project issues. Capable of applying design patterns to solve real world problems. Strongly motivated to use decoupled design architecture.}\\
+%----------------------------------------------------------------------------------------
+%	PRINCIPLES
+%----------------------------------------------------------------------------------------
+%
+\section{Principles} 
+
+\begin{tabular}{rl}
+	\textsc{}
+	& Clean Code. \\
+	& Reliable and Reproducible Build System.\\
+	& Feedback loop \\
+	& Self testing Code base.\\
+	& Separation of concerns. \\
+	& Automate what you can. \\
+	& Document everything. \\
+\end{tabular}\\[10pt]
+
+
 %----------------------------------------------------------------------------------------
 %	EDUCATION
 %----------------------------------------------------------------------------------------
@@ -252,7 +288,6 @@
 & \textsc{Computer Science and Engineering} \\ 
 & \textit{Bangladesh University of Engineering and Technology}\\
 & \textit{CGPA: 3.00/4}\\
-&\\
 	 
 
 %----------------------------------------------------------------------------------------
@@ -267,13 +302,10 @@
 
 \begin{tabular}{rl}
 Intermediate 
-& \textsc{java}, \textsc{javascript}, PHP\\
-& Shel ,SQL\\
-& Scheme \\
+& \textsc{java}, \textsc{javascript}, PHP, Shel ,SQL\\
 &\\
 Basic 
-& \textsc{C family of languages}, \LaTeX\\ 
-&HTML \& css\\
+& \textsc{C family of languages}, \LaTeX, HTML \& css\\
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -285,34 +317,64 @@ Basic
 \begin{tabular}{rl}
 	
 Intermediate
-& Maven, Play\\
-& Node.js, React.js, Flux, jquery. \\
-& Andriod, Gradle, Retrofit\\
+& Maven, Play, Node.js, React.js, Flux, jquery. \\
+& Android, Gradle, Retrofit\\
 & \\
 Basic
-& Angular.js\\
-& Laravel, Codeigniter \\
-& Nginx, Apache Tomcat,  Amazon AWS.\\
-& Unity, Dot Net\\
+& Angular.js, Laravel, Tomcat, AWS.\\
 \end{tabular}\\[10pt]
 
 %----------------------------------------------------------------------------------------
-%	PRINCIPLES
+%	PERSONAL PROJECTS
+%----------------------------------------------------------------------------------------
+\section{Personal Projects} 
+
+
+%------------------------------------------------
+%	PROJECT 2
+%------------------------------------------------
+
+
+{\raggedright\large Build Systems \\
+	\textit{\href {https://github.com/Bitaron/java-maven}{https://git.io/v15lc}(mvn), \href{https://github.com/Bitaron/java-sbt}{https://git.io/v15lW}(sbt)
+		\href{https://github.com/Bitaron/js}{https://git.io/v15l4}(js)}\\[5pt]}
+\textsc{- Use of \textbf{maven} with \textbf{JAX-RX} \& \textbf{JPA}. }\\
+\textsc{- Use of \textbf{sbt} with \textbf{Play} \& \textbf{Ebean}..}\\
+\textsc{- Build system using \textbf{node} and \textbf{jake}}\\
+\normalsize{}\\
+
+
+%------------------------------------------------
+%	PROJECT 4
+%------------------------------------------------
+
+
+{\raggedright\large Weather Application \\
+	\textit{\href {https://github.com/Bitaron/js/tree/weather}{https://git.io/v15lR}}\\[5pt]}
+\textsc{- Display temperature and current local time based on city.}\\
+\textsc{- Use of \textbf{react.js} and \textbf{flux} architecture.}\\
+\textsc{- Testing \textbf{flux} using \textbf{jasmine}.}\\
+
+
+%%------------------------------------------------
+%%	PROJECT 5
+%%------------------------------------------------
+%
+%
+{\raggedright\large Android Applications \\
+	\textit{\href {https://www.dropbox.com/s/3qdujsilwmpq720/letsgo.apk?dl=0}{https://bit.ly/2Kkv8Z6}}\\[5pt]}
+	\textsc{- Turn mobile silent based on predefined time and \textbf{geofence}.}\\
+\textsc{- Use of \textbf{gradle}.}\\
+%		\textit{Lets Go \href {https://dl.dropboxusercontent.com/u/84146203/projects/android/letsgo.apk}{http://bit.ly/2hwlipz}}\\[5pt]
+%		\textsc{- List nearby places based on users location and preference}\\
+%\textsc{- Use of \textbf{node-express-mongo} stack}\\
+%\textsc{- Use of \textbf{retrofit},\textbf{android account} \& \textbf{google map}}\\
+
+
+
+
 %----------------------------------------------------------------------------------------
 
-\section{Principles} 
-
-\begin{tabular}{rl}
-	\textsc{}
-	& Clean Code. \\
-	& Reliable and Reproducible Build System.\\
-	& Feedback Loop.\\
-	& Self testing Code base.\\
-	& Separation of Concerns.\\
-	& \\
-\end{tabular}\\[10pt]
-
-%----------------------------------------------------------------------------------------
 	
 \end{minipage} % End right-hand side of the page
 
