--- a/cv_3.tex
+++ b/cv_3.tex
@@ -101,18 +101,18 @@
 \textit{\href {https://www.commlinkinfotech.com/}{https://www.commlinkinfotech.com/}}\\
 }}
 	 \textsc{- Network management software}\\
-	 	\tab \textsc{- Use \textit{google Map api} with \textit{flux architecture}}\\
+	 	\tab \textsc{- Use \textit{google Map api} with \textit{flux architecture.}}\\
 	 	\tab \textsc{- Implement \textit{TMF814V3.2} using \textit{Corba}.}\\
 	 	\tab \textsc{- Backend development(caching,api) in \textit{Java}.}\\
 	 \textsc{- System on Chip(SoC) }\\
 	 	\tab \textsc{- Project management.}\\
-	 	\tab \textsc{- Build system using \textit{ruby} and \textit{rake} to build, test and deploy.}\\
-	 	\tab \textsc{- Add \textit{unity} \textit{C} testing framework.}\\
+	 	\tab \textsc{- Build system using \textit{ruby} and \textit{rake}.}\\
+	 	\tab \textsc{- Use \textit{C} testing framework \textit{unity}.}\\
 	 	\tab \textsc{- Embedded large application software(\textit{C} language) debug.}\\
 	 	\tab \textsc{- \textit{SoC} boot using \textit{U-boot} and \textit{linux}.}\\
 	 	\tab \textsc{- \textit{SoC} h/w pin configuration and connection check.}\\
-	 	\tab \textsc{- Documentation of every process.}\\
-	 	\tab \textsc{- Android app to upload application software to SoC}\\
+	 	\tab \textsc{- Documentation.}\\
+	 	\tab \textsc{- Android app to upload application software to \textit{SoC}.}\\
 
 
 %------------------------------------------------
@@ -190,7 +190,7 @@
 
 {\raggedright\large Corba architecture \\
 	\textit{\href {https://github.com/Bitaron/Corba}{https://git.io/Jeray}}\\[5pt]}
-\textsc{- \textit{Corba} library use example.}\\
+\textsc{- \textit{Corba} library usage example.}\\
 
 
 %------------------------------------------------
@@ -200,7 +200,7 @@
 
 {\raggedright\large Embedded application test \\
 	\textit{\href {https://github.com/Bitaron/C}{https://git.io/JeraH}}\\[5pt]}
-\textsc{- Use of \textit{Cppu} library to test \textit{C} code.}\\
+\textsc{- \textit{C} test library(\textit{Cppu}) usage example.}\\
 
 
 %------------------------------------------------
@@ -264,7 +264,7 @@
 	\textsc{}
 	& Clean Code. \\
 	& Reliable and Reproducible Build System.\\
-	& Feedback loop \\
+	& Feedback loop. \\
 	& Self testing Code base.\\
 	& Separation of concerns. \\
 	& Automate what you can. \\
